# LikeeScraper

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt  scraper.py
LikeeScraper/: api.py  config.py  scraper.py
tests/: test_api.py
